kie-issues#22 Add tests for equality operators in positive unary tests in DMN