@@ -19,7 +19,6 @@ package org.kie.dmn.feel.runtime;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 import org.junit.runners.Parameterized;
 import org.kie.dmn.api.feel.runtime.events.FEELEvent;
@@ -56,9 +55,14 @@ public class FEELExpressionsTest extends BaseFEELTest {
 
                 // named parameters: in this case foo is null
                 {"{ is minor : function( foo, person's age ) foo = null and person's age < 18, bob is minor : is minor( person's age : 16 ) }.bob is minor", Boolean.TRUE , null},
+                {"{ is eighteen : function( foo, person's age ) foo = null and person's age = 18, bob is eighteen : is eighteen( person's age : 18 ) }.bob is eighteen", Boolean.TRUE , null},
 
                 // unary test invocation
                 {"{ is minor : < 18, bob is minor : is minor(16) }.bob is minor", Boolean.TRUE , null},
+                {"{ is eighteen : = 18, bob is eighteen : is eighteen(18 ) }.bob is eighteen", Boolean.TRUE , null},
+                {"{ is eighteen : = 18, bob is eighteen : is eighteen(17 ) }.bob is eighteen", Boolean.FALSE , null},
+                {"-(2) != 2", Boolean.TRUE , null},                
+                {"2 != 2", Boolean.FALSE , null},   
 
                 // negated unary tests
                 {"10 in ( not( <5, >=20, =15, !=10 ) )", Boolean.FALSE, FEELEvent.Severity.ERROR},
@@ -90,7 +94,7 @@ public class FEELExpressionsTest extends BaseFEELTest {
                 {"{ someNestedList : { theList : [1, 2, 3] } , x : 47, result : x in someNestedList.theList }.result", Boolean.FALSE , null},
                 {"{ exp: 2, v: 3, r: exp**v}.r", BigDecimal.valueOf(8), null},
                 {"{Principal: 12, Rate: 1, Fees: 1, Term: -1, R: (Principal*Rate/12)/(1-(1+Rate/12)**-Term)+Fees}.R", new BigDecimal("-11.00000000000000000000000000000005"), null},
-                {"3[item > 2]", List.of(new BigDecimal(3)), null},
+                {"3[item > 2]", Arrays.asList(new BigDecimal(3)), null},
                 {"contains([\"foobar\"], \"of\")", Boolean.FALSE, null},
 
         };
